--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,5 @@
   "typescript.tsserver.log": "verbose",
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
+  "cSpell.words": ["proxyfied"]
 }
